--- a/Projeto Final/estilo.css
+++ b/Projeto Final/estilo.css
@@ -1,9 +1,7 @@
 * {
     font-family: 'Lato', sans-serif;
-    margin:0px;
-    
+    margin:0px;    
   }
-  
   
   .cabecalho{
     padding: 10px 0 10px 0;
@@ -21,7 +19,6 @@
     box-shadow: 3px 3px 8px black;
   }
   
-
   p{
     font-size:medium;
     text-align: center;
@@ -69,9 +66,12 @@
   display: flex;
   justify-content:center;
   text-align: center;
-  margin: 15px;
-  
+  margin: 20px;  
+  padding-bottom: 15px;
+
 }
+
+
 
 .card-img-top{
   margin-top: 8px;
